# elasticplusplus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  client.cpp  client.h  query.cpp  query.h  results.cpp  results.h  search.cpp  search.h  sort.cpp  sort.h
