set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
set(CMAKE_CXX_STANDARD 14)
include_directories(${CPR_INCLUDE_DIRS})
include_directories(${CMAKE_HOME_DIRECTORY}/vendor/jsoncpp)
add_library(elasticplusplus STATIC query.cpp query.h search.cpp search.h sort.cpp sort.h client.cpp client.h results.cpp results.h ${CMAKE_HOME_DIRECTORY}/vendor/jsoncpp/jsoncpp.cpp)
target_link_libraries(elasticplusplus ${CPR_LIBRARIES})
